// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when applied with \`function\` option matches snapshot for \`[path].super-compressed.gz[query]\` value ({String}): assets 1`] = `
Array [
  Array [
    "0.async.js.super-compressed.gz?ver=81982f432266ef1edd1a",
    117,
  ],
  Array [
    "0.async.js?ver=81982f432266ef1edd1a",
    130,
  ],
  Array [
    "5b1f36bc41ab31f5b801d48ba1d65781.png",
    78117,
  ],
  Array [
    "5b1f36bc41ab31f5b801d48ba1d65781.png.super-compressed.gz",
    73160,
  ],
  Array [
    "96621d3c37d96ad3bf792fcc848d912f.svg",
    672,
  ],
  Array [
    "96621d3c37d96ad3bf792fcc848d912f.svg.super-compressed.gz",
    393,
  ],
  Array [
    "js.js.super-compressed.gz?var=81982f432266ef1edd1a",
    2802,
  ],
  Array [
    "js.js?var=81982f432266ef1edd1a",
    10221,
  ],
]
`;

exports[`when applied with \`function\` option matches snapshot for \`[path].super-compressed.gz[query]\` value ({String}): errors 1`] = `Array []`;

exports[`when applied with \`function\` option matches snapshot for \`[path].super-compressed.gz[query]\` value ({String}): warnings 1`] = `Array []`;

exports[`when applied with \`function\` option matches snapshot for custom function ({Function}): assets 1`] = `
Array [
  Array [
    "0.async.js.gz?ver=81982f432266ef1edd1a",
    117,
  ],
  Array [
    "0.async.js?ver=81982f432266ef1edd1a",
    130,
  ],
  Array [
    "5b1f36bc41ab31f5b801d48ba1d65781.png",
    78117,
  ],
  Array [
    "5b1f36bc41ab31f5b801d48ba1d65781.png.gz",
    73160,
  ],
  Array [
    "96621d3c37d96ad3bf792fcc848d912f.svg",
    672,
  ],
  Array [
    "96621d3c37d96ad3bf792fcc848d912f.svg.gz",
    393,
  ],
  Array [
    "js.js.gz?var=81982f432266ef1edd1a",
    2802,
  ],
  Array [
    "js.js?var=81982f432266ef1edd1a",
    10221,
  ],
]
`;

exports[`when applied with \`function\` option matches snapshot for custom function ({Function}): errors 1`] = `Array []`;

exports[`when applied with \`function\` option matches snapshot for custom function ({Function}): warnings 1`] = `Array []`;
